swagger improved, gateway container added
